@@ -37,18 +37,4 @@ import org.kiji.annotations.Inheritance;
 public abstract class KijiMapper<INKEY, INVALUE, OUTKEY, OUTVALUE>
     extends Mapper<INKEY, INVALUE, OUTKEY, OUTVALUE>
     implements KVOutputJob {
-
-  /**
-   * Loads a KijiMapper class by name.
-   *
-   * @param className Fully qualified name of the class to load.
-   * @return the loaded class.
-   * @throws ClassNotFoundException if the class is not found.
-   * @throws ClassCastException if the class is not a KijiMapper.
-   */
-  @SuppressWarnings("rawtypes")
-  public static Class<? extends KijiMapper> forName(String className)
-      throws ClassNotFoundException {
-    return Class.forName(className).asSubclass(KijiMapper.class);
-  }
 }
